[gd_scene load_steps=4 format=3 uid="uid://bpgknie1qcmyp"]

[ext_resource type="Script" path="res://Scenes/Actors/godot.gd" id="1_05odd"]
[ext_resource type="Texture2D" uid="uid://dxx8wyfx6ie4e" path="res://icon.svg" id="1_x27bn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exns0"]
size = Vector2(126, 126)

[node name="Godot" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
input_pickable = true
script = ExtResource("1_05odd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x27bn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_exns0")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[node name="Test" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="timeout" from="Test" to="." method="_on_test_timeout"]
